adding javafx support